# oh-markdown-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  SETUP_SUMMARY.md  pyproject.toml  release-please-config.json
.github/: OPENHANDS_REVIEW.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  manual-agent-eval.yml  pr-review-by-openhands.yml  pr-title-check.yml  release-please.yml  release.yml
doc/: markdown-tool.md
examples/: basic_usage.py
src/oh_markdown_tool/: __init__.py  formatter.py  numbering.py  operations.py  parser.py  toc.py  tool.py
tests/: __init__.py  conftest.py  test_fixtures.py  test_formatter.py  test_integration.py  test_numbering.py  test_operations.py  test_parser.py  test_toc.py  test_tool.py
tests/agent_eval/: __init__.py  conftest.py  test_agent_edits.py
tests/fixtures/: README.md
tests/fixtures/cleanup/: messy_doc_expected.md  messy_doc_input.md
tests/fixtures/delete/: leaf_section_input.md  with_children_expected.md  with_children_input.md  with_children_params.json
tests/fixtures/demote/: with_children_expected.md  with_children_input.md
tests/fixtures/fix/: trailing_spaces_expected.md  trailing_spaces_input.md
tests/fixtures/insert/: after_section_expected.md  after_section_input.md  after_section_params.json  subsection_expected.md  subsection_input.md  subsection_params.json
tests/fixtures/move/: after_sibling_expected.md  after_sibling_input.md  after_sibling_params.json  with_children_expected.md  with_children_input.md  with_children_params.json
tests/fixtures/promote/: with_children_expected.md  with_children_input.md  with_children_params.json
tests/fixtures/renumber/: fix_gaps_expected.md  fix_gaps_input.md  nested_hierarchy_expected.md  nested_hierarchy_input.md
tests/fixtures/rewrap/: long_lines_expected.md  long_lines_input.md
tests/fixtures/toc/: create_expected.md  create_input.md  remove_expected.md  remove_input.md  remove_params.json
